--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title:            Thoughts from a Coding Lalafell
+title:            Thats a Good Question
 description:      Describe your website here.
 disqus_shortname: codinglalafell
 reading_time:     true
